--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500&family=Source+Sans+Pro:ital@1&display=swap');
+
+
 * {
   margin: 0;
   padding: 0;
@@ -9,7 +11,7 @@
 body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 9px;
-  height: calc(100vh - 150px);
+  /* height: calc(100vh - 150px); */
   background: no-repeat center/cover url('../assets/bg2.jpg');
   height: 100vh;
 }
@@ -36,6 +38,8 @@ header {
 
 }
 
+
+
 .menu {
   background-color: lightslategray;
   position: fixed;
@@ -51,6 +55,7 @@ header {
 .menu {
   opacity: 0.9;
 }
+
 /* 
 .line {
   margin: 0px 50px;
@@ -61,18 +66,18 @@ header {
 
 .menu a {
   display: block;
-  padding: 10px 20px;
-  transition: all .4s;
+  padding: 14px 8px;
+  transition: .5s;
 }
 
 .menu a:hover {
   color: rgb(92, 167, 238);
+  background: #fff;
 }
 
 .menu ul {
   display: flex;
   margin: 0px;
-  padding: 10px;
   justify-content: space-evenly;
   list-style: none;
 }
@@ -81,6 +86,21 @@ a {
   color: #fff;
   text-decoration: none;
 }
+
+.titulo {
+  transform: scale(0.2) translateY(50vh);
+  opacity: 0;
+  animation: linear 2s titulomove  forwards;
+}
+
+@keyframes titulomove {
+  100% {
+    transform: scale(1) translateY(0);
+    opacity: 1;
+  }
+}
+
+
 
 .site-subtitle, 
 .site-title {
@@ -100,14 +120,18 @@ a {
 
 /* Portfolio */
 
+
 .portfolio-content {
   background-color: rgb(245, 239, 239);
+  min-height: 100vh;
 }
 
+/* .contato h2, */
 .port-title {
   font-size: 2em;
   text-align: center;
-  padding: 10px 40px;
+  padding: 10px 0px;
+  line-height: 150px;
 }
 
 .card-content {
@@ -170,4 +194,40 @@ figcaption {
   .card-content{
     flex-wrap: wrap;
   } 
+}
+
+.contato {
+
+  min-height: calc(100vh - 300px);
+  background-color: #222;
+}
+
+.contato h2 {
+  color: #fff;
+  text-align: center;
+  font-size: 2em;
+  padding: 30px 0;
+}
+
+.contato .container-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contato .icons {
+  padding: 8px 20px;
+}
+
+.contato a {
+  color: #fff;
+  transition: .4s;
+
+}
+
+
+.contato a:active,
+.contato a:hover {
+  text-decoration: none;
+  text-shadow: 0px 0px 10px  rgb(255, 255, 255);
 }
