--- a/styles/style.css
+++ b/styles/style.css
@@ -20,12 +20,36 @@ body {
   body {
     font-size: 12px;
   }
+
+  .menu  a {
+    font-size: 1.3em;
+    display: block;
+    padding: 9px 8px;
+    transition: .5s;
+  }
+  
+  .menu a:hover {
+    background-color: #fff;
+    color: rgb(92, 167, 238);
+    border: -3px solid;
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px 1px #fff ;
+  }
+  
 }
 
 /*  breakpoint */
 @media (min-width: 600px) {
   body {
     font-size: 16px;
+  }
+
+  menu a:hover {
+    background-color: #fff;
+    color: rgb(92, 167, 238);
+    border: -3px solid;
+    border-radius: 6px;
+    box-shadow: 0px 0px 10px 1px #fff ;
   }
 }
 
@@ -42,12 +66,12 @@ header {
   background-color: lightslategray;
   position: fixed;
   width: 100vw;
+  
   top: 0;
   font-weight: bold;
   z-index: 99;
-  /* border: 1px solid; */
-  box-shadow: 0px 1px 3px -1px #fff;
-  /* opacity: 0.9; */
+  border: -1px solid;
+  box-shadow: -1px 1px 10px -1px #fff;
 }
 
 .menu {
@@ -55,15 +79,19 @@ header {
 }
 
 .menu a {
+  font-size: 1.3em;
   display: block;
-  padding: 14px 8px;
+  padding: 9px 8px;
   transition: .5s;
 }
 
 
 .menu a:hover {
+  background-color: #fff;
   color: rgb(92, 167, 238);
-  background: #fff;
+  border: -3px solid;
+  border-radius: 6px;
+  box-shadow: 0px 0px 10px 1px #fff ;
 }
 
 .menu ul {
@@ -74,19 +102,24 @@ header {
 }
 
 a {
+  height: 44px;
   color: #fff;
   text-decoration: none;
 }
 
 .titulo {
-  transform: scale(0.2) translateY(50vh);
-  opacity: 0;
-  animation: linear 2s titulomove  forwards;
+  /* transform: scale(0.2) translateY(50vh); */
+  /* opacity: 0; */
+  animation: ease 2s titulomove  forwards;
 }
 
 @keyframes titulomove {
-  100% {
-    transform: scale(1) translateY(0);
+  from {
+    transform: translateY(100px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(-10px);
     opacity: 1;
   }
 }
@@ -167,7 +200,7 @@ a {
   text-align: center;
   font-size: 2em;
   margin-bottom: 80px;
-  line-height: 60px;
+  line-height: 100px;
   color: #ffffff;
 }
 
@@ -255,7 +288,7 @@ a {
   justify-content: center;
   align-items: center;
   max-width: 950px;
-  padding: 35px 0;
+  padding: 35px 30px;
   flex-wrap: wrap;
 }
 
@@ -268,7 +301,7 @@ a {
 
 .img-portfolio {
   height: 350px;
-  width: 350px;
+  width: 100%;
   margin: 0 26px;
   object-fit: cover;
   border-radius: 2%;
